[metadata]
name = sasawrapper
version = attr: sasawrapper.__version__.__version__
description = Wrapper of CeVIO AI
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = takana-v
url = https://github.com/takana-v/sasawrapper
classifiers =
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    pywin32 >= 303

[options.extras_require]
dev =
    pysen[lint]
    sphinx
    sphinx-rtd-theme
